# DAQ-Firmware-Libraries

.github/workflows/: ci_build.yaml
Application/: circular_queue.hpp  data_payload.hpp
Application/DataLogger/: DataLogger.cpp  DataLogger.hpp
Application/Mutex/: imutex.hpp  mutex_cmsisv2.cpp
Application/Relay/: can_relay.cpp  can_relay.hpp  can_relay.hpp.orig
Docs/: Doxyfile.in
Platform/I2C/STM/: I2CStmF4.cpp
Platform/Interfaces/: iadc.hpp  ican.hpp
Platform/STM/F4/ADC/: adc_stmf4.cpp  adc_stmf4.hpp
Platform/STM/F4/CAN/: bxcan_stmf4.cpp  bxcan_stmf4.hpp
Platform/STM/F4/GPIO/: gpio_stmf4.hpp
Platform/STM/F4/I2C/: i2c_stmf4.cpp  i2c_stmf4.hpp
Sensor/Accelerometer/: LSM6DSOXAccelerometer.hpp  iaccelerometer.hpp  lsm303dlhc.cpp  lsm303dlhc.hpp
Sensor/CANmodGPS/: CANmodGPS.cpp  CANmodGPS.hpp
Sensor/ECU/PE3/: pe3.hpp
Sensor/GyroScope/: LSM6DSOXGyroscope.hpp  igyroscope.hpp
Sensor/IMU/: imu.cpp  imu.hpp
Sensor/LinearPotentiometer/: ilinear_potentiometer.hpp  sls1322.cpp  sls1322.hpp
Tests/: CMakeLists.txt
Tests/Src/Application/: circular_queue_tests.cpp
Tests/Src/Sensor/ECU/PE3/: frame_parsing_tests.cpp  pe_frames_tests.cpp
